# advent-of-code-2023-cpp

./: .clang-format  .clang-tidy  .cmake-format.yaml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
aoc2023/: CMakeLists.txt  day01.cpp
aoc2023/inputs/: day01.h
src/: CMakeLists.txt  Utils.h  day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day20.cpp  day21.cpp  day22.cpp  day23.cpp  day24.cpp  day25.cpp
src/inputs/: day01.h  day02.h  day03.h  day04.h  day05.h  day06.h  day07.h  day08.h  day09.h  day10.h  day11.h  day12.h  day13.h  day14.h  day15.h  day16.h  day17.h  day18.h  day19.h  day20.h  day21.h  day22.h  day23.h  day24.h  day25.h
vcpkg/: vcpkg-configuration.json  vcpkg.json
vcpkg/ports/z3/: portfile.cmake  z3_fix_compilation.patch
vcpkg/toolchains/: clang-19-toolchain.cmake  clang-20-toolchain.cmake  clang-21-toolchain.cmake
vcpkg/triplets/: x64-linux-clang-19.cmake  x64-linux-clang-20.cmake  x64-linux-clang-21.cmake
